Bug 1957227 - Fix client vs. window coordinate confusion in transparent window code. r=win-reviewers,handyman

The paint DC takes client coords, while we were providing window coords.

This means that the ComputeNonClientRegion() code was also clearing wrong
coords. Remove that, since it's disabled by default, and folks in bug 1935894
have confirmed that it's no longer needed after that and bug 1950441.

By the time this patch lands those should be in release already and we should
have two full cycles should any issue come up with those.

Differential Revision: https://phabricator.services.mozilla.com/D243584