widget/windows/nsWindow.h
@@ -554,7 +554,6 @@ class nsWindow final : public nsBaseWidget,
   bool UpdateNonClientMargins(bool aReflowWindow = true);
   void UpdateDarkModeToolbar();
   void ResetLayout();
-  LayoutDeviceIntRegion ComputeNonClientRegion();
   HWND GetOwnerWnd() const { return ::GetWindow(mWnd, GW_OWNER); }
   bool IsOwnerForegroundWindow() const {
     HWND owner = GetOwnerWnd();
@@ -646,8 +645,7 @@ class nsWindow final : public nsBaseWidget,
   LayoutDeviceIntRegion GetOpaqueRegionForTesting() const override {
     return mOpaqueRegion;
   }
-  // Gets the translucent region, relative to the whole window, including the
-  // NC area.
+  // Gets the translucent region, in client coordinates.
   LayoutDeviceIntRegion GetTranslucentRegion();
   void MaybeInvalidateTranslucentRegion();
 
@@ -849,8 +847,8 @@ class nsWindow final : public nsBaseWidget,
 
   // Graphics
   LayoutDeviceIntRect mLastPaintBounds;
-  // The region of the window we know is cleared to transparent already
-  // (relative to the whole window).
+  // The region of the window we know is cleared to transparent already,
+  // in client coords.
   LayoutDeviceIntRegion mClearedRegion;
 
   ResizeState mResizeState = NOT_RESIZING;
@@ -941,10 +939,6 @@ class nsWindow final : public nsBaseWidget,
       mWindowBtnRect;
 
   mozilla::DataMutex<Desktop> mDesktopId;
-
-  // If set, indicates the non-client-area region must be cleared to black on
-  // next paint.
-  bool mNeedsNCAreaClear = false;
 
   friend class nsWindowGfx;
 
